{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 45,
  "lineage": "a1c89879-260c-2861-60cf-eba0b8fd2480",
  "resources": [
    {
      "module": "module.VNet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allowedports",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/networkSecurityGroups/allowedports",
            "location": "westeurope",
            "name": "allowedports",
            "resource_group_name": "serversambatra-nginx-staging",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VNet.module.ResourceGroup.azurerm_resource_group.webserver"
          ]
        }
      ]
    },
    {
      "module": "module.VirtualMachines",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/networkInterfaces/nginx-interface",
            "internal_domain_name_suffix": "zzckpzbwzzhulllgjhmogk0kvg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/publicIPAddresses/webserver_public_ip",
                "subnet_id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/virtualNetworks/sambatra-webserver-net/subnets/subnet"
              }
            ],
            "location": "westeurope",
            "name": "nginx-interface",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "serversambatra-nginx-staging"
          },
          "dependencies": [
            "module.VirtualMachines.azurerm_public_ip.webserver_public_ip",
            "module.VirtualMachines.azurerm_subnet.webserver-subnet",
            "module.VirtualMachines.azurerm_virtual_network.webserver-net",
            "module.VirtualMachines.module.ResourceGroup.azurerm_resource_group.webserver"
          ]
        }
      ]
    },
    {
      "module": "module.VirtualMachines",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webserver_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/publicIPAddresses/webserver_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "webserver_public_ip",
            "resource_group_name": "serversambatra-nginx-staging",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "costcenter": "it",
              "environment": "prod"
            }
          },
          "dependencies": [
            "module.VirtualMachines.module.ResourceGroup.azurerm_resource_group.webserver"
          ]
        }
      ]
    },
    {
      "module": "module.VirtualMachines",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "webserver-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/virtualNetworks/sambatra-webserver-net/subnets/subnet",
            "name": "subnet",
            "resource_group_name": "serversambatra-nginx-staging",
            "virtual_network_name": "sambatra-webserver-net"
          },
          "dependencies": [
            "module.VirtualMachines.azurerm_virtual_network.webserver-net",
            "module.VirtualMachines.module.ResourceGroup.azurerm_resource_group.webserver"
          ]
        }
      ]
    },
    {
      "module": "module.VirtualMachines",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "webserver-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e4a744ce-ce36-454f-ad66-49d8e32b4aae",
            "id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/virtualNetworks/sambatra-webserver-net",
            "location": "westeurope",
            "name": "sambatra-webserver-net",
            "resource_group_name": "serversambatra-nginx-staging"
          },
          "dependencies": [
            "module.VirtualMachines.module.ResourceGroup.azurerm_resource_group.webserver"
          ]
        }
      ]
    },
    {
      "module": "module.VirtualMachines.module.VNet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allowedports",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/393e3de3-0900-4b72-8f1b-fb3b1d6b97f1/resourceGroups/serversambatra-nginx-staging/providers/Microsoft.Network/networkSecurityGroups/allowedports",
            "location": "westeurope",
            "name": "allowedports",
            "resource_group_name": "serversambatra-nginx-staging",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VirtualMachines.module.VNet.module.ResourceGroup.azurerm_resource_group.webserver"
          ]
        }
      ]
    }
  ]
}